--- a/exterior.html
+++ b/exterior.html
@@ -14,6 +14,9 @@
 <body>  
   <div class="common-wrap">
   <div class="banner-section" id="top">
+    <a href="index.html" class="homeBtn">
+      <img src="images/home.png" />
+    </a>
     <img src="images/banner3.jpg">
     <h1 class="banner-head " data-aos="fade-up">3DS MAX Exterior</h1> 
   </div> 
@@ -62,7 +65,7 @@
       </div> 
   </footer>
     <div class="copy-right ">
-      © Prasanthi    </div>
+      Designed and developed by  © Prasanthi    </div>
     </div>
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script> 
