--- a/exterior.html
+++ b/exterior.html
@@ -1,102 +1,186 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head> 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
-  <link rel="stylesheet" href="css/bootstrap.css" /> 
-  <link rel="stylesheet" href="css/owl.theme.default.css" />
-  <link rel="stylesheet" href="css/owl.carousel.css" /> 
-  <link rel="stylesheet" href="css/style.css" /> 
-  <link rel="stylesheet" href="css/responsive.css" /> 
-  <link rel="stylesheet" href="css/aos.css"> 
-  <title>Ranjith Rajan</title>
-</head> 
-<body>  
-  <div class="common-wrap">
-  <div class="banner-section" id="top">
-    <a href="index.html" class="homeBtn">
-      <img src="images/home.png" />
-    </a>
-    <img src="images/banner3.jpg">
-    <h1 class="banner-head " data-aos="fade-up">3DS MAX Exterior</h1> 
-  </div> 
-    <div class="autocad-section">
-      <h1 class="" data-aos="fade-up">3DS MAX Exterior Works</h1> 
-      <div class="work-row " data-aos="fade-up">
-        <img src="images/pic4.png" >
-        <div class="work-no ">
-          House Exterior
-        </div>
-       </div>
-       <div class="work-row" data-aos="fade-up">
-        <div class="work-no">
-          House Exterior
-        </div>
-        <img src="images/pic5.png" >
-       </div> 
-    </div> 
-  </div>
-  <footer>
-    <div class="footerr-img">
-      <img src="images/banner5.jpg" class="  " data-aos="fade-down-right">
-    </div>
-    <div class="footer-right">
-
-    <div class="social-media-section">
-      <div class="  "  data-aos="fade-down-right">
-      <div class="footer-block">
-         <ul>
-          <li><a href="mailto:renjiinbox@gmail.com">renjiinbox@gmail.com</a></li>
-        </ul>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/owl.theme.default.css" />
+    <link rel="stylesheet" href="css/owl.carousel.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="stylesheet" href="css/aos.css" />
+    <title>Ranjith Rajan</title>
+  </head>
+  <body>
+    <div class="common-wrap">
+      <div class="banner-section" id="top">
+        <a href="index.html" class="homeBtn">
+          <img src="images/home.png" />
+        </a>
+        <img src="images/banner3.jpg" />
+        <h1 class="banner-head" data-aos="fade-up">3DS MAX Interior Designs</h1>
       </div>
-    </div>
-    <div class="  " data-aos="fade-down-left">
-      <div class="footer-block ">
-        <ul class="social">
-          <li><a href="https://www.facebook.com/ranjith.rajan.3557"> f </a></li>
-          <li><a href="https://www.linkedin.com/in/ranjith-rajan-b214971b1/">in</a></li>  
-        </ul>
+      <div class="autocad-section">
+        <h1 class="" data-aos="fade-up">3DS MAX Interior Work</h1>
+        <div class="work-row" data-aos="fade-up">
+          <img src="images/amit1.jpg" />
+          <div class="work-no">House Interior</div>
+        </div>
+
+        <div class="work-row" data-aos="fade-up">
+          <div class="work-no">House Interior</div>
+          <img src="images/amit2.jpg" />
+        </div>
+
+        <div class="work-row" data-aos="fade-up">
+          <img src="images/amit3.jpg" />
+          <div class="work-no">House Interior</div>
+        </div>
+        <div class="work-row" data-aos="fade-up">
+          <div class="work-no">House Interior</div>
+          <img src="images/amit4.jpg" />
+        </div>
+
+        <div class="work-row" data-aos="fade-up">
+          <img src="images/amit5.jpg" />
+          <div class="work-no">House Interior</div>
+        </div>
+        <div class="work-row" data-aos="fade-up">
+          <div class="work-no">House Interior</div>
+          <img src="images/amit6.jpg" />
+        </div>
+
+        <div class="work-row" data-aos="fade-up">
+          <img src="images/amit7.jpg" />
+          <div class="work-no">House Interior</div>
+        </div>
+        <div class="work-row" data-aos="fade-up">
+          <div class="work-no">House Interior</div>
+          <img src="images/amit8.jpg" />
+        </div>
+        <div class="work-row" data-aos="fade-up">
+          <img src="images/amit9.jpg" />
+          <div class="work-no">3</div>
+        </div>
       </div>
-    </div>
-  </div>
-  </div>
-   <div class="go-to-top  " data-aos="fade-down-left">
-        <a href="#top"><img src="images/top.png"></a>
-      </div> 
-  </footer>
-    <div class="copy-right ">
-      Designed and developed by  © Prasanthi    </div>
-    </div>
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script> 
-  <script type="text/javascript" src="js/owl.carousel.js"></script>
-  <script type="text/javascript" src="js/aos.js"></script>
- 
-<script>
-var acc = document.getElementsByClassName("accordion");
-var i;
 
-for (i = 0; i < acc.length; i++) {
-  acc[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var panel = this.nextElementSibling;
-    if (panel.style.display === "block") {
-      panel.style.display = "none";
-    } else {
-      panel.style.display = "block";
-    }
-  });
-}
-window.scroll({  
-  behavior: 'smooth'
-});
+      <div class="autocad-section">
+        <h1 class="" data-aos="fade-up">3DS MAX Interior Works</h1>
+        <div class="work-row" data-aos="fade-up">
+          <img src="images/home5.jpeg" />
+          <div class="work-no">House Interior</div>
+        </div>
 
-</script>
-<script>
-AOS.init({
-  duration: 1000
-});
-</script>
-</body>
+        <div class="work-row" data-aos="fade-up">
+          <div class="work-no">House Interior</div>
+          <img src="images/pic2.png" />
+        </div>
+
+        <div class="work-row" data-aos="fade-up">
+          <img src="images/home6.jpeg" />
+          <div class="work-no">House Interior</div>
+        </div>
+        <div class="work-row" data-aos="fade-up">
+          <div class="work-no">House Interior</div>
+          <img src="images/home3.jpeg" />
+        </div>
+
+        <div class="work-row" data-aos="fade-up">
+          <img src="images/home2.jpeg" />
+          <div class="work-no">House Interior</div>
+        </div>
+        <div class="work-row" data-aos="fade-up">
+          <div class="work-no">House Interior</div>
+          <img src="images/home1.jpeg" />
+        </div>
+
+        <div class="work-row" data-aos="fade-up">
+          <img src="images/pic1.png" />
+          <div class="work-no">House Interior</div>
+        </div>
+        <div class="work-row" data-aos="fade-up">
+          <div class="work-no">House Interior</div>
+          <img src="images/home4.jpeg" />
+        </div>
+        <div class="work-row" data-aos="fade-up">
+          <img src="images/pic3.png" />
+          <div class="work-no">3</div>
+        </div>
+      </div>
+
+      <footer>
+        <div class="footerr-img">
+          <img src="images/banner5.jpg" class="  " data-aos="fade-down-right" />
+        </div>
+        <div class="footer-right">
+          <div class="social-media-section">
+            <div class="  " data-aos="fade-down-right">
+              <div class="footer-block">
+                <ul>
+                  <li>
+                    <a href="mailto:renjiinbox@gmail.com"
+                      >renjiinbox@gmail.com</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="  " data-aos="fade-down-left">
+              <div class="footer-block">
+                <ul class="social">
+                  <li>
+                    <a href="https://www.facebook.com/ranjith.rajan.3557">
+                      f
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/in/ranjith-rajan-b214971b1/"
+                      >in</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="go-to-top" data-aos="fade-down-left">
+          <a href="#top"><img src="images/top.png" /></a>
+        </div>
+      </footer>
+      <div class="copy-right">Designed and developed by © Prasanthi</div>
+    </div>
+    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/owl.carousel.js"></script>
+    <script type="text/javascript" src="js/aos.js"></script>
+
+    <script>
+      var acc = document.getElementsByClassName("accordion");
+      var i;
+
+      for (i = 0; i < acc.length; i++) {
+        acc[i].addEventListener("click", function () {
+          this.classList.toggle("active");
+          var panel = this.nextElementSibling;
+          if (panel.style.display === "block") {
+            panel.style.display = "none";
+          } else {
+            panel.style.display = "block";
+          }
+        });
+      }
+      window.scroll({
+        behavior: "smooth",
+      });
+    </script>
+    <script>
+      AOS.init({
+        duration: 1000,
+      });
+    </script>
+  </body>
 </html>
- 
