--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="intro-head">
       <div class="intro-head-left">
         <div class="intro-img " data-aos="fade-right">
-          <img src="images/ranji.jpg">
+          <img src="images/renji.jpeg">
         </div>
         <div class="intro-info fade" data-aos="fade-right">
             <h3>Ranjith Rajan</h3>   
@@ -105,9 +105,10 @@
             </div>
             <ul class="">
                <li><img src="images/aircel.png" class="listImg"/><br/>Aircel Limited,<span>Openwave Informatics, Kochi</span><p>Sales Officer [1 year]</p></li>
-               <li><img src="images/bghud.png" class="listImg"/><br/>B-GHUD, <span>Autodesk Authorised center, Mavelikkara</span><p>Architecture Designer Trainee [ 6 Months]</p>  </li> 
-               <li><img src="images/alkhayam.png" class="listImg"/><br/>Al - Khayam Al - Arabiah Tents and Sheds LLC, <span>UAE</span><p>Architecture Designer [2018-2019]</p> </li> 
-            </ul>
+               <li><img src="images/alkhayam.png" class="listImg"/><br/>Al - Khayam Al - Arabiah Tents and Sheds LLC, <span>UAE</span><p>Architecture Designer [2019-2020]</p> </li> 
+               <li> <br/>  <span>Freelance Designer</span><p>2021 - present </p>  </li> 
+            
+              </ul>
           </div>
           <div class="intro-tabs" data-aos="fade-left">
             <div class="tab-heads">
@@ -206,7 +207,7 @@
       </div> 
   </footer>
     <div class="copy-right ">
-      © Prasanthi    </div>
+      Designed and developed by  © Prasanthi   </div>
     </div>
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script> 
