--- a/autocad.html
+++ b/autocad.html
@@ -23,6 +23,12 @@
   </div> 
     <div class="autocad-section">
       <h1 class="" data-aos="fade-up">Autocad Works</h1> 
+        <div class="work-row" data-aos="fade-up">
+        <div class="work-no">
+         3BHK House
+        </div>
+        <img src="images/new6.png" >
+       </div>
        <div class="work-row " data-aos="fade-up">
         <img src="images/img1.png" >
         <div class="work-no ">
