--- a/interior.html
+++ b/interior.html
@@ -14,6 +14,9 @@
 <body>  
   <div class="common-wrap">
   <div class="banner-section" id="top">
+    <a href="index.html" class="homeBtn">
+      <img src="images/home.png">
+    </a>
     <img src="images/banner3.jpg">
     <h1 class="banner-head " data-aos="fade-up">3DS MAX Interior</h1> 
   </div>
