--- a/interior.html
+++ b/interior.html
@@ -28,10 +28,10 @@
          <div class="work-no">
           House Interior
         </div>
-        <img src="images/new5.png" > 
+        <img src="images/new5.jpg" > 
        </div> 
       <div class="work-row" data-aos="fade-up">
-        <img src="images/new3.jpeg" >
+        <img src="images/new3.jpg" >
        <div class="work-no">
           House Interior
         </div>
@@ -40,11 +40,11 @@
          <div class="work-no">
           House Interior
         </div>
-        <img src="images/new4.png" > 
+        <img src="images/new4.jpg" > 
        </div> 
       
  <div class="work-row" data-aos="fade-up">
-        <img src="images/new2.jpeg" >
+        <img src="images/new2.jpg" >
        <div class="work-no">
           House Interior
         </div>
@@ -53,7 +53,7 @@
          <div class="work-no">
           House Interior
         </div>
-        <img src="images/new1.png" > 
+        <img src="images/new1.jpg" > 
        </div> 
 
       
