--- a/autocad.html
+++ b/autocad.html
@@ -27,7 +27,7 @@
         <div class="work-no">
          3BHK House
         </div>
-        <img src="images/new6.png" >
+        <img src="images/new6.jpg" >
        </div>
        <div class="work-row " data-aos="fade-up">
         <img src="images/img1.png" >
