--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="intro-head-right " data-aos="fade-left">
         <ul>
           <li>9447503268</li>
-          <li>renjiinbox@gmail.com</li>
+          <li><a href="mailto:renjiinbox@gmail.com">renjiinbox@gmail.com</a></li>
           <li>843, BTM Layout, Bengaluru</li>
         </ul>
       </div>
