--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <ul class=" ">
               <li>9447503268</li>
-              <li>renjiinbox@gmail.com</li>
+              <li><a href="mailto:renjiinbox@gmail.com">renjiinbox@gmail.com</a></li>
               <li>843, BTM Layout, Bengaluru</li>
             </ul>
           </div>
