--- a/exterior.html
+++ b/exterior.html
@@ -21,51 +21,51 @@
           <img src="images/home.png" />
         </a>
         <img src="images/banner3.jpg" />
-        <h1 class="banner-head" data-aos="fade-up">3DS MAX Interior Designs</h1>
+        <h1 class="banner-head" data-aos="fade-up">3DS MAX Exterior Designs</h1>
       </div> 
 
-      <div class="autocad-section">
-        <h1 class="" data-aos="fade-up">3DS MAX Interior Works</h1>
+      <div class="autocad-section"> 
         <div class="work-row" data-aos="fade-up">
-          <img src="images/home5.jpeg" />
-          <div class="work-no">House Interior</div>
+          <img src="images/pic4.png" />
+          <div class="work-no">House Exterior</div>
         </div>
 
         <div class="work-row" data-aos="fade-up">
-          <div class="work-no">House Interior</div>
-          <img src="images/pic2.png" />
+          <div class="work-no">House Exterior</div>
+          <img src="images/pic5.png" />
         </div>
 
         <div class="work-row" data-aos="fade-up">
-          <img src="images/home6.jpeg" />
-          <div class="work-no">House Interior</div>
-        </div>
-        <div class="work-row" data-aos="fade-up">
-          <div class="work-no">House Interior</div>
-          <img src="images/home3.jpeg" />
+          <img src="images/ex1.png" />
+          <div class="work-no">House Exterior</div>
         </div>
 
         <div class="work-row" data-aos="fade-up">
-          <img src="images/home2.jpeg" />
-          <div class="work-no">House Interior</div>
+          <div class="work-no">House Exterior</div>
+          <img src="images/ex2.png" />
         </div>
-        <div class="work-row" data-aos="fade-up">
-          <div class="work-no">House Interior</div>
-          <img src="images/home1.jpeg" />
+
+         <div class="work-row" data-aos="fade-up">
+          <img src="images/ex3.jpg" />
+          <div class="work-no">House Exterior</div>
         </div>
 
         <div class="work-row" data-aos="fade-up">
-          <img src="images/pic1.png" />
-          <div class="work-no">House Interior</div>
+          <div class="work-no">House Exterior</div>
+          <img src="images/ex4.jpg" />
         </div>
+
+        
+         <div class="work-row" data-aos="fade-up">
+          <img src="images/ex5.jpg" />
+          <div class="work-no">House Exterior</div>
+        </div>
+
         <div class="work-row" data-aos="fade-up">
-          <div class="work-no">House Interior</div>
-          <img src="images/home4.jpeg" />
+          <div class="work-no">House Exterior</div>
+          <img src="images/ex6.jpg" />
         </div>
-        <div class="work-row" data-aos="fade-up">
-          <img src="images/pic3.png" />
-          <div class="work-no">3</div>
-        </div>
+ 
       </div>
 
       <footer>
